# field_test_tool

./: .gitignore  KNOWN_ISSUES.txt  LICENSE.txt  README.md  docker-compose.yml  install.sh  run.sh
ftt_database/: Dockerfile
ftt_database/postgres/: ftt_schema.sql  setup_ftt_db.sh  setup_queries.sql
ftt_database/scripts/: api.py  mergeDbs.py
ftt_report_generator/config/: 2021_fkie_test.xml  auto_config.xml  fkie_test_config.xml
ftt_report_generator/src/: db2rep.py  dbAdapter.py  mapGenerator.py  plotsGenerator.py
ftt_report_generator/src/logos/: contribution.txt
ftt_report_generator/src/templates/: rep_data_stat_template.j2  rep_header_stat_template.j2  rep_header_template.j2  rep_segment_header_template.j2  rep_shift_header_template.j2
ftt_ros_interface/: CMakeLists.txt  Dockerfile  package.xml  setup.py
ftt_ros_interface/config/: ros2api_config.yaml
ftt_ros_interface/include/ftt_ros_interface/: base64.h  map_to_jpeg.h  robot_pose_publisher.h  ros2api.h
ftt_ros_interface/launch/: ftt_ros.launch  ftt_ros.launch.xml  map_to_jpeg.launch  robot_mode_publisher.launch  robot_mode_publisher.launch.xml  robot_pose_publisher.launch  ros2api.launch
ftt_ros_interface/scripts/: robotModePublisher.py  robot_mode_publisher.py  ros2api.py
ftt_ros_interface/src/: base64.cpp  map_to_jpeg.cpp  robot_pose_publisher.cpp  ros2api.cpp
ftt_server/: Dockerfile
ftt_server/scripts/: api.py
ftt_web_interface/: config.html  index.html  package-lock.json  package.json  webpack.config.js  webpack.config.prod.js
ftt_web_interface/assets/scripts/: config.js  config.js.map  index.js  index.js.map
ftt_web_interface/assets/styles/: config.css  generic.css  index.css  modal.css
ftt_web_interface/src/: config.js  index.js
ftt_web_interface/src/database_interface/: Image.js  ItoReason.js  Leg.js  LocalPose.js  MapImage.js  Note.js  Performer.js  Personnel.js  Pose.js  PoseSource.js  Segment.js  Shift.js  TestEvent.js  Vehicle.js  Weather.js
ftt_web_interface/src/frames/: ConfigFrame.js  LogSelection.js  MainFrame.js  SegmentDetail.js
ftt_web_interface/src/lib/: Leaflet.ImageOverlay.Rotated.js  Ros2DVisualization.js  RosLib.umd.cjs  RoslibVector3.js  roslib.js
ftt_web_interface/src/overlays/: AutoRefreshConfig.js  LegEdit.js  MapConfig.js  ReportDownload.js  RosConfig.js  SegmentEdit.js  ShiftCompare.js  ShiftEdit.js  TestEventEdit.js  UserSelect.js
ftt_web_interface/src/ros_interface/: Parameters.js  Topics.js  roslibExtension.js
ftt_web_interface/src/utility/: ConfirmationModal.js  DOMGeneric.js  LeafletMap.js  LocalMap.js  Modal.js  ServerInterface.js  TimeZone.js  TrajectoryDistance.js
test_bag/: fkie_test.bag
