<?xml version="1.0"?>
<package>
  <name>ftt_ros_interface</name>
  <version>0.2.0</version>
  <description>ROS data collector and database interface nodes for the Field Test Tool</description>
  <author>Johannes Pellenz</author>
  <author>Sebastian de la Cueva Couto Klein</author>
  <author>Lucas Dimartino</author>
  <author>Carlos Tampier Cotoras</author>
  <maintainer email="carlos.tampier.cotoras@fkie.fraunhofer.de">Carlos Tampier Cotoras</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>industrial_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>industrial_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
