<?xml version="1.0"?>
<package>
  <name>ftt_ros_interface</name>
  <version>0.2.0</version>
  <description>ROS data collector and database interface nodes for the Field Test Tool</description>
  <author>Johannes Pellenz</author>
  <author>Sebastian de la Cueva Couto Klein</author>
  <author>Lucas Dimartino</author>
  <author>Carlos Tampier Cotoras</author>
  <maintainer email="carlos.tampier.cotoras@fkie.fraunhofer.de">Carlos Tampier Cotoras</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>industrial_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>industrial_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>rosbridge_server</run_depend>

</package>
