<?xml version="1.0"?>
<package format="2">
  <name>ftt_ros_interface</name>
  <version>2.0.0</version>
  <description>ROS data collector and database interface nodes for the Field Test Tool</description>
  <author>Johannes Pellenz</author>
  <author>Sebastian de la Cueva Couto Klein</author>
  <author>Lucas Dimartino</author>
  <author>Carlos Tampier Cotoras</author>
  <maintainer email="carlos.tampier.cotoras@fkie.fraunhofer.de">Carlos Tampier Cotoras</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>builtin_interfaces</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>

  <exec_depend>rosbridge_server</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
